--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "cross-env PORT=10888 react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "server:dev": "node server/index.js"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +22,7 @@
     "@vkontakte/vkui-connect": "^1.1.3",
     "babel-eslint": "^9.0.0",
     "core-js": "^2.6.5",
+    "express": "^4.17.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.3"
