--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "express": "^4.17.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.3",
-    "react-dom": "^16.8.3"
+    "react-dom": "^16.8.3",
+    "uuidv4": "^4.0.0"
   },
   "browserslist": [
     ">0.2%",
